# notjira

./: LICENSE  README.md  base.py  context.py  epic.py  example.py  pyproject.toml  task.py  utils.py
notjira/: base.py  chart.py  context.py  task.py  time_estimate.py  utils.py
